# screenpipe

./: .gitignore  COVERAGE.md  Cargo.toml  Flow.md  Search.md  WORK_INSIGHT_README.md  atomization_test.md  biome.json  lefthook.yml
.claude/skills/screenpipe-api/: SKILL.md
.github/workflows/: release-app.yml  release-dystil.yml  release-enterprise.yml  style.yml
apps/dystil/: knip.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/dystil/app/: error.tsx  global-error.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
apps/dystil/app/home/: page.tsx
apps/dystil/app/overlay/: page.tsx
apps/dystil/app/search/: page.tsx
apps/dystil/app/settings/: page.tsx
apps/dystil/app/shortcut-reminder/: page.tsx
apps/dystil/app/viewer/: page.tsx
apps/dystil/components/: app-entitlement-gate.tsx  browser-sidebar.tsx  chat-sidebar.tsx  deeplink-handler.tsx  login-dialog.tsx  markdown.tsx  notification-handler.tsx  pipe-ai-icon.tsx  post-install-connections-modal.tsx  shortcut-reminder.tsx  splash-screen.tsx  standalone-chat.tsx  update-banner.tsx
apps/dystil/components/auth/: login-screen.tsx  logout-button.tsx  session-provider.tsx  social-buttons.tsx
apps/dystil/components/chat/: chat-history-view.tsx  markdown-block.tsx  schedule-prompt-dialog.tsx  source-citation-footer.test.tsx  source-citation-footer.tsx  summary-cards.tsx
apps/dystil/components/hooks/: use-chat-conversations.ts
apps/dystil/components/rewind/: ai-presets-selector.tsx  current-frame-timeline.tsx  timeline.tsx
apps/dystil/components/settings/: account-section.tsx  ai-presets.tsx  archive-settings.tsx  cloud-pipes-tab.tsx  connections-section.tsx  display-section.tsx  general-settings.tsx  meeting-apps-picker.tsx  notifications-settings.tsx  privacy-section.tsx  recording-settings.tsx  shortcut-section.tsx  speakers-section.tsx  storage-section.tsx  sync-settings.tsx
apps/dystil/components/status/: permission-banner.tsx  permission-buttons.tsx
apps/dystil/e2e/: README.md
apps/dystil/e2e/helpers/: app-launcher.ts
apps/dystil/e2e/mock-updates/: README.md
apps/dystil/e2e/specs/: meeting-apps-picker.spec.ts  windows-user-journey.spec.ts  zz-logout-resurrect.spec.ts
apps/dystil/lib/: app-entitlement.ts  auth-client.ts  auth-session.ts  auth-store.ts  browser-state-cache.ts  chat-storage.ts  chat-utils.test.ts  connections-events.ts  search-navigation.ts  summary-templates.ts  team-pipes.ts  timeline-types.ts
apps/dystil/lib/__tests__/: chat-storage.test.ts  chat-store.test.ts  context-pruning.test.ts  owned-browser-ownership.test.ts
apps/dystil/lib/chat/: quota-errors.ts  system-prompt.ts
apps/dystil/lib/constants/: connections.ts
apps/dystil/lib/events/: types.ts
apps/dystil/lib/hooks/: use-auto-suggestions.ts  use-cloud-runner.ts  use-enterprise-policy.ts  use-settings.tsx  use-team.ts  use-timeline-cache.tsx  use-timeline-store.tsx  use-usage-status.tsx
apps/dystil/lib/stores/: chat-store.ts  pi-event-router.ts
apps/dystil/lib/utils/: chat-title.ts  connection-chip.test.ts  font-size.test.ts  media-file-path.ts  meeting-context.ts  notification-toggle.test.ts  tauri.ts  (+1 more)
apps/dystil/scripts/: exe-to-intunewin.ps1  gen-skill-content.js  pre_build.js
apps/dystil/src-tauri/: Cargo.toml  build.rs  tauri.beta.conf.json  tauri.conf.json  tauri.enterprise.conf.json  tauri.prod.conf.json
apps/screenpipe-app-tauri/: package.json
apps/screenpipe-app-tauri/components/: deeplink-handler.tsx  notification-handler.tsx  pipe-store.tsx  splash-screen.tsx  standalone-chat.tsx  update-banner.tsx
apps/screenpipe-app-tauri/e2e/: COVERAGE.md
apps/screenpipe-app-tauri/src-tauri/: Cargo.toml  build.rs  tauri.beta.conf.json  tauri.conf.json  tauri.enterprise.conf.json  tauri.prod.conf.json
cloud/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
cloud/crates/ai-gateway/: Cargo.toml
cloud/crates/ai-gateway/src/: lib.rs
cloud/crates/work-insights-api/: Cargo.toml
cloud/crates/work-insights-api/migrations/: 20260610153000_agent_runs_response_text.sql
cloud/crates/work-insights-api/prompts/: daily_v1.txt  segment_v1.txt
cloud/crates/work-insights-api/src/: main.rs  reports.rs
cloud/crates/work-insights-blob/: Cargo.toml
cloud/crates/work-insights-blob/src/: lib.rs
cloud/crates/work-insights-db/: Cargo.toml
cloud/crates/work-insights-db/migrations/: 20260610000000_stage2_ingest.sql  20260610010000_stage3_daily_reports.sql  20260611000000_identity.sql
cloud/crates/work-insights-db/src/: identity.rs  ingest.rs  lib.rs  reports.rs
cloud/crates/work-insights-ingest/: Cargo.toml
cloud/crates/work-insights-ingest/src/: lib.rs
cloud/crates/work-insights-queue/: Cargo.toml
cloud/crates/work-insights-queue/src/: lib.rs
cloud/crates/work-insights-report/: Cargo.toml
cloud/crates/work-insights-report/src/: lib.rs
cloud/services/auth/: Dockerfile  package.json  tsconfig.json
cloud/services/auth/src/: auth.ts  email.ts  server.ts
cloud/services/db-worker/: Cargo.toml
cloud/services/db-worker/src/: main.rs
cloud/services/ingest-api/: Cargo.toml
cloud/services/ingest-api/src/: auth.rs  auth_proxy.rs  main.rs
cloud/services/report-runner/: Cargo.toml
cloud/services/report-runner/src/: main.rs
crates/dystil-protocol/src/: lib.rs
crates/screenpipe-apple-intelligence/: Cargo.toml
crates/screenpipe-audio/: Cargo.toml
crates/screenpipe-config/src/: recording.rs
crates/screenpipe-connect/: Cargo.toml
crates/screenpipe-core/: Cargo.toml
crates/screenpipe-core/src/: lib.rs
crates/screenpipe-db/: Cargo.toml
crates/screenpipe-db/src/: db.rs  types.rs
crates/screenpipe-engine/src/: lib.rs  pipes_api.rs  recording_config.rs  server.rs  work_insights_sync.rs
crates/screenpipe-protocol/: Cargo.toml
crates/screenpipe-protocol/src/: lib.rs
crates/screenpipe-redact/: Cargo.toml
crates/screenpipe-secrets/: Cargo.toml
docs/: AUTH_PLAN.md  user_and_device_auth_via_supabasse.md  work-insights-platform-plan.md
infra/azure/: README.md  deploy.sh  main.bicep  main.json  parameters.example.json
(+79 files in other folders)
