[package]
name = "screenpipe-apple-intelligence"
version = "0.1.0"
edition = "2021"
description = "On-device AI processing using Apple Foundation Models framework (macOS 26+)"
license-file = { workspace = true }

[features]
default = []
screenpipe-query = ["dep:reqwest", "dep:tokio"]
server = ["dep:axum", "dep:tokio", "dep:uuid", "dep:tokio-stream"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true, optional = true }
chrono = { workspace = true }
tokio = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

[[bin]]
name = "fm-server"
path = "src/server_bin.rs"
required-features = ["server"]

[dev-dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
