[package]
name = "work-insights-db"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
chrono = { workspace = true }
hex = { workspace = true }
screenpipe-protocol = { path = "../../../crates/screenpipe-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }
