[package]
name = "work-insights-queue"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
azure_core = { version = "0.21.0" }
azure_messaging_servicebus = { version = "0.21.0", default-features = false, features = ["enable_reqwest_rustls"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
