[package]
name = "work-insights-ingest-api"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
default-run = "work-insights-api"

[[bin]]
name = "work-insights-api"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
screenpipe-protocol = { path = "../../../crates/screenpipe-protocol" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
work-insights-blob = { path = "../../crates/work-insights-blob" }
work-insights-db = { path = "../../crates/work-insights-db" }
work-insights-ingest = { path = "../../crates/work-insights-ingest" }
work-insights-queue = { path = "../../crates/work-insights-queue" }
work-insights-report = { path = "../../crates/work-insights-report" }
