[package]
name = "work-insights-report-runner"
version = { workspace = true }
authors = { workspace = true }
description = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
anyhow = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
work-insights-db = { path = "../../crates/work-insights-db" }
work-insights-report = { path = "../../crates/work-insights-report" }
